restart. focused on localStorage Lists

--- a/css/boardparts.css
+++ b/css/boardparts.css
@@ -1,4 +1,4 @@
-#heading {
+/* #heading {
     display: flex;
     justify-content: space-between;
 }
@@ -16,4 +16,4 @@
 }
 .call-um {
     background-color: goldenrod;
-}
+} */
