--- a/css/style.css
+++ b/css/style.css
@@ -4,91 +4,40 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-  /* max-width: 1024px; */
-  width: 100vw;
-  background-color: black;
-  color: white;
+body, html {
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 #game-wrapper {
-  position: relative;
-  max-width: 100vw;
-  overflow-x: hidden;
+  background-color: pink; 
   display: grid;
-  grid-template-areas:
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(3, auto);
+  grid-template-areas: 
     "HEADER"
-    "CARD"
-    "FOOTER";
-  text-align: center;
-}
-
-/*  HEADER   */
-header {
-  display: grid;
-  grid-template-areas: "HeaderA HeaderB HeaderC";
-}
-
-/*  CARDBOX  */
-#cardbox {
-  min-height: 800px;
-  display: grid;
-
-}
-
-/*  CARD  */
-#card {
-  display: grid;
-  grid-template-areas:
-    "AH BH CH DH EH"
-    "A1 B1 C1 D1 E1"
-    "A2 B2 C2 D2 E2"
-    "A3 B3 C3 D3 E3"
-    "A4 B4 C4 D4 E4"
-    "A5 B5 C5 D5 E5"
+    "CARDBOX"
+    "FOOTER"
   ;
-
+  gap: 22px;
+  justify-content: center;
+  padding: 22px;
 }
 
-/* FOOTER */
-footer {
-  min-height: 24px;
-  background: green;
+#header {
+  grid-area: HEADER;
   display: grid;
-  grid-template-areas: "FooterA FooterB FooterC";
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
+    "HDR-A  HDR-B HDR-C"
+  ;
+  justify-content: space-between;
 }
 
-#lastCall {
-  grid-area: HeaderA;
-}
 
-#call {
-  grid-area: HeaderB;
-}
+/* CARD  */
 
-#resets {
-  grid-area: HeaderC;
-}
-
-button {
-  padding: 18px;
-  border-radius: 14px;
-  background-color: goldenrod;
-  font-size: 1.4rem;
-  border: 3px solid blueviolet;
-}
-
-@media screen and (max-width: 768px) {
-  #last {
-    grid-area: HeaderA;
-  }
-
-  #call {
-    grid-area: HeaderB;
-  }
-
-  #resets {
-    grid-area: FooterC;
-  }
+#call-row {
+  display: flex;
 }
